--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/theme.css">
-        <link rel="stylesheet" href="css/structure.css">
         <link rel="stylesheet" href="css/form.css">
         <link rel="stylesheet" href="css/brandonkwilliams.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -39,9 +37,9 @@
             </div>
             <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
                 <ul class="nav navbar-nav navbar-right" id="topnav">
-                    <!-- <li>
+                    <li>
                         <a href="#Philosophy">PHILOSOPHY</a>
-                    </li> -->
+                    </li>
                     <li>
                         <a href="#Process">PROCESS</a>
                     </li> 
@@ -73,7 +71,7 @@
     </div>
     
     <!-- Philosophy -->
-    <div class="outer-fit bg-gray" id="Philosophy">
+    <div class="outer-fit bg-white" id="Philosophy">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row">
@@ -92,8 +90,8 @@
         </div>
     </div>
 
-    <!-- Process
-    <div class="outer-fit bg-white" id="Process">
+    <!-- Process 
+    <div class="outer-fit bg-gray" id="Process">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row">
@@ -108,20 +106,20 @@
                     </div>
                 </div> 
                 <div class="row">
-                    <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
+                    <div class="col-xs-12 col-sm-4 col-md-4 left font-blue">
                         <img class="img-responsive" src="http://placehold.it/350x270">
-                        <h2>Need Finding</h2>
+                        <h2 class="font-blue">Need Finding</h2>
                             <div class="outer-small-line-top">  
                             </div>  
                                 <div class="inner-small-line">
                                 </div>
                             <div class="outer-small-line-bottom">  
                             </div>
-                        <p class="font-blue">There is always a problem, but its finding the right one that presents the real challenge. The first step in any design process is to understand the user's actual needs. To do this requires a truthful attempt at learning</p>
-                        <p>Associated Skills: </p>
+                        <p>There is always a problem, but its finding the right one that presents the real challenge. The first step in any design process is to understand the user's actual needs. To do this requires a truthful attempt at learning</p>
+                        <p class="font-gray">Associated Skills: </p>
                     </div>
 
-                    <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
+                    <div class="col-xs-12 col-sm-4 col-md-4 left font-blue">
                         <img class="img-responsive" src="http://placehold.it/350x270">
                         <h2>Ideation</h2>
                             <div class="outer-small-line-top">  
@@ -130,8 +128,8 @@
                                 </div>
                             <div class="outer-small-line-bottom">  
                             </div>
-                        <p class="font-blue">In order to understand what potential users actually need, it is necessary to research them in their</p>
-                        <p>Associated Skills: </p>
+                        <p>In order to understand what potential users actually need, it is necessary to research them in their</p>
+                        <p class="font-gray">Associated Skills: </p>
                     </div>
 
                     <div class="col-xs-12 col-sm-4 col-md-4 left font-blue">
@@ -149,7 +147,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
+                    <div class="col-xs-12 col-sm-4 col-md-4 left font-blue">
                         <img class="img-responsive" src="http://placehold.it/350x270">
                         <h2>Testing</h2>
                             <div class="outer-small-line-top">  
@@ -158,11 +156,11 @@
                                 </div>
                             <div class="outer-small-line-bottom">  
                             </div>
-                        <p class="font-blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <p>Associated Skills: </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <p class="font-gray">Associated Skills: </p>
                     </div>
 
-                    <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
+                    <div class="col-xs-12 col-sm-4 col-md-4 left font-blue">
                         <img class="img-responsive" src="http://placehold.it/350x270">
                         <h2>Iteration</h2>
                             <div class="outer-small-line-top">  
@@ -171,11 +169,11 @@
                                 </div>
                             <div class="outer-small-line-bottom">  
                             </div>
-                        <p class="font-blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <p>Associated Skills: </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <p class="font-gray">Associated Skills: </p>
                     </div>
 
-                    <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
+                    <div class="col-xs-12 col-sm-4 col-md-4 left font-blue">
                         <img class="img-responsive" src="http://placehold.it/350x270">
                         <h2>Manufacturing</h2>
                             <div class="outer-small-line-top">  
@@ -184,8 +182,8 @@
                                 </div>
                             <div class="outer-small-line-bottom">  
                             </div>
-                        <p class="font-blue">Having been raised on a farm and around plastics manufacturing, I've grown to understand the value of products that can actually be made. Whether it was an addition on our house, or a set of door panels for a '68 Porsche, I learned that the drawings don't mean anything if you can't make something.</p>
-                        <p><span class="font-green">Associated Skills:</span> Design for Manufacturing, Plastic Injection Molding, Plastic Vacuum-forming, Moldmaking, Wood-working, Welding</p>
+                        <p>Having been raised on a farm and around plastics manufacturing, I've grown to understand the value of products that can actually be made. Whether it was an addition on our house, or a set of door panels for a '68 Porsche, I learned that the drawings don't mean anything if you can't make something.</p>
+                        <p class="font-gray">Associated Skills: Design for Manufacturing, Plastic Injection Molding, Plastic Vacuum-forming, Moldmaking, Wood-working, Welding</p>
                     </div>   
                 </div>
             </div>
@@ -211,7 +209,7 @@
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
                         <a href="guitarcase.html"><img class="img-responsive" src="img/guitarcasehome.jpg"></a>
-                        <input type="button" value="Guitar Case | 2011" class="btn btn-new" onclick="location.href='guitarcase.html';">
+                        <input type="button" value="Guitar Case | 2011" class="btn btn-blue" onclick="location.href='guitarcase.html';">
                         </div>
                         <div class="pad-space">
                     </div> 
@@ -219,7 +217,7 @@
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
                         <a href="loungechair.html"><img class="img-responsive" src="img/chairpagehome.jpg"></a>
-                        <input type="button" value="Lounge Chair | 2013" class="btn btn-new" onclick="location.href='loungechair.html';">
+                        <input type="button" value="Lounge Chair | 2013" class="btn btn-blue" onclick="location.href='loungechair.html';">
                         </div>
                         <div class="pad-space">
                     </div> 
@@ -227,7 +225,7 @@
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
                         <a href="speaker.html"><img class="img-responsive" src="img/speakerpagehome.jpg"></a>
-                        <input type="button" value="Bluetooth Speaker | 2013" class="btn btn-new" onclick="location.href='speaker.html';">
+                        <input type="button" value="Bluetooth Speaker | 2013" class="btn btn-blue" onclick="location.href='speaker.html';">
                         </div>
                         <div class="pad-space">
                     </div>
@@ -236,8 +234,9 @@
         </div>
     </div>
 
+
     <!-- Contact -->
-    <div class="outer-full-page bg-green" id="Contact">
+    <div class="outer-full-page bg-blue" id="Contact">
         <div class="inner-full-page middle center">
             <div class="container">
                 <div class="row padded-bottom">
@@ -252,67 +251,50 @@
                         <span class="font-white"><h3>I love what I do. Feel free to send me an email or give me a call if you'd like to learn more about me or any of my projects.</h3></span>
                     </div>
                 </div>
-<!--
-                <form id="form1" name="form1" class="wufoo topLabel page" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate
-      action="https://brandonkwilliams.wufoo.com/forms/zv5ugmr1asipbp/#public">
-  
-                    <ul>
-
-                    <li id="foli211" class="notranslate namebox     ">
-                    <label class="desc" id="title211" for="Field211">
-                    </label>
-                    <div>
-                    <input id="Field211" name="Field211" type="text" class="field text medium" value="Your Name" maxlength="255" tabindex="1" onkeyup="" />
-                    </div>
-                    </li><li id="foli208" class="notranslate emailbox     ">
-                    <label class="desc" id="title208" for="Field208">
-                    </label>
-                    <div>
-                    <input id="Field208" name="Field208" type="email" spellcheck="false" class="field text medium" value="Your Email" maxlength="255" tabindex="2" /> 
-                    </div>
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                <form id="form1" name="form1" class="wufoo topLabel page" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate action="https://brandonkwilliams.wufoo.com/forms/zv5ugmr1asipbp/#public">
+                <ul>
+                    <li id="foli211" class="notranslate namebox">
+                        <label class="desc" id="title211" for="Field211">
+                        </label>
+                            <div>
+                                <input id="Field211" name="Field211" type="text" class="field text large" placeholder="Name" maxlength="255" tabindex="1" onkeyup="" />
+                            </div>
+                    </li>
+                    <li id="foli208" class="notranslate emailbox">
+                        <label class="desc" id="title208" for="Field208">
+                        </label>
+                        <div>
+                            <input id="Field208" name="Field208" type="email" spellcheck="false" class="field text large" placeholder="Email" maxlength="255" tabindex="2" /> 
+                        </div>
                     </li>
                     <li id="foli3" 
-                    class="notranslate messagebox     "><label class="desc" id="title3" for="Field3">
-
-                    </label>
-
-                    <div>
-                    <textarea id="Field3" 
-                    name="Field3" 
-                    class="field textarea medium" 
-                    spellcheck="true" 
-                    rows="10" cols="50" 
-                    tabindex="3" 
-                    onkeyup=""
-                     >Your Message</textarea>
-
-                    </div>
-                    </li> <li class="buttons ">
-                    <div>
-
-                                        <input id="saveForm" name="saveForm" class="btn btn-new submit" 
-                        type="submit" value="Submit"
-                     /></div>
+                    class="notranslate messagebox">
+                        <label class="desc" id="title3" for="Field3">
+                        </label>
+                        <div>
+                            <textarea id="Field3" name="Field3" class="field textarea medium" spellcheck="true" rows="10" cols="50" tabindex="3" onkeyup="" placeholder="Message"></textarea>
+                        </div>
+                    </li> 
+                    <li class="buttons ">
+                        <div>
+                            <input id="saveForm" name="saveForm" class="btn btn-green submit" type="submit" value="Submit"/>
+                        </div>
                     </li>
-
-                    <li class="hide">
-                    <label for="comment">Do Not Fill This Out</label>
-                    <textarea name="comment" id="comment" rows="1" cols="1"></textarea>
-                    <input type="hidden" id="idstamp" name="idstamp" value="YXGS2kn7yOgPn3GTKEtaSen8y6F8AOW7tKAy0ZKn/1Y=" />
-                    </li>
-                    </ul>
+                </ul>
                 </form> 
 
                 <div class="row">
                     <div class="col-md-offset-2 col-md-8">
-                        <h3><span class="font-light">email. brandonwilliams.nu@gmail.com | phone. 574-305-1468</span></h3>
+                        <h3><span class="font-normal font-gray">email. brandonwilliams.nu@gmail.com | phone. 574-305-1468</span></h3>
                     </div>
-                </div>      
+                </div>
+            </div>
             </div>   
         </div>
     </div>   
 
-    -->
 
         <!-- Load JS here for greater good =============================-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
