--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                     <li>
                         <a href="#Philosophy">PHILOSOPHY</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="#Process">PROCESS</a>
-                    </li> 
+                    </li>  -->
                     <li>
                         <a href="#Work">WORK</a>
                     </li>
@@ -71,7 +71,7 @@
     </div>
     
     <!-- Philosophy -->
-    <div class="outer-fit bg-white" id="Philosophy">
+    <div class="outer-fit bg-gray" id="Philosophy">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row">
