--- a/speaker.html
+++ b/speaker.html
@@ -58,12 +58,12 @@
         <![endif]-->
     
     <!-- Project Outline -->
-    <div class="outer-fit bg-blue" id="Philosophy">
+    <div class="outer-fit bg-green" id="Philosophy">
         <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-3 font-white">
-                        <h1>Bluetooth Speaker | 2013</h1>
+                    <div class="col-md-6 col-md-offset-3 font-white left">
+                        <h1>Bluetooth Speaker <span class="font-blue">|</span> 2013</h1>
                          <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-dark">
@@ -135,7 +135,7 @@
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-3 font-blue">
+                    <div class="col-md-6 col-md-offset-3 font-blue left">
                         <h1>Other Work</h1>
                         <div class="outer-line-top">  
                         </div>  
@@ -149,7 +149,7 @@
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
                         <a href="guitarcase.html"><img class="img-responsive" src="img/guitarcasehome.jpg"></a>
-                        <input type="button" value="Guitar Case | 2011" class="btn btn-blue" onclick="location.href='guitarcase.html';">
+                        <input type="button" value="Guitar Case | 2011" class="btn btn-blue-gray" onclick="location.href='guitarcase.html';">
                         </div>
                         <div class="pad-space">
                     </div>
@@ -157,7 +157,7 @@
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
                         <a href="loungechair.html"><img class="img-responsive" src="img/chairpagehome.jpg"></a>
-                        <input type="button" value="Lounge Chair | 2013" class="btn btn-blue" onclick="location.href='loungechair.html';">
+                        <input type="button" value="Lounge Chair | 2013" class="btn btn-blue-gray" onclick="location.href='loungechair.html';">
                         </div>
                         <div class="pad-space">
                     </div>
@@ -166,24 +166,24 @@
         </div>
     </div>
 
-    <!-- Contact -->
-    <div class="outer-full-page bg-blue" id="Contact">
+        <!-- Contact -->
+    <div class="outer-full-page bg-green" id="Contact">
         <div class="inner-full-page middle center">
             <div class="container">
                 <div class="row padded-bottom">
-                    <div class="col-md-6 col-md-offset-3 font-white">
+                    <div class="col-md-6 col-md-offset-3 font-white left">
                         <h1>Contact</h1>
                         <div class="outer-line-top">  
                         </div>  
-                            <div class="inner-line-dark">
+                            <div class="inner-line-blue">
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-white"><h3>I love what I do. Feel free to send me an email or give me a call if you'd like to learn more about me or any of my projects.</h3></span>
+                        <span class="font-white"><h3>I love what I do. If you love any of it, feel free to send me an email or give me a call if to learn more about me or any of my projects.</h3></span>
                     </div>
                 </div>
-
-                <div class="col-md-8 col-md-offset-2">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
                 <form id="form1" name="form1" class="wufoo topLabel page" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate action="https://brandonkwilliams.wufoo.com/forms/zv5ugmr1asipbp/#public">
                 <ul>
                     <li id="foli211" class="notranslate namebox">
@@ -210,20 +210,20 @@
                     </li> 
                     <li class="buttons ">
                         <div>
-                            <input id="saveForm" name="saveForm" class="btn btn-green submit" type="submit" value="Submit"/>
+                            <input id="saveForm" name="saveForm" class="btn btn-blue submit" type="submit" value="Submit"/>
                         </div>
                     </li>
                 </ul>
                 </form> 
-
+        </div> 
                 <div class="row">
-                    <div class="col-md-offset-2 col-md-8">
-                        <h3><span class="font-normal font-gray">email. brandonwilliams.nu@gmail.com | phone. 574-305-1468</span></h3>
+                    <div class="col-md-8 col-md-offset-2">
+                        <h3><span class="font-normal font-blue">email. brandonwilliams.nu@gmail.com | phone. 574-305-1468</span></h3>
                     </div>
                 </div>
             </div>   
         </div>
-    </div>   
+    </div> 
 
         <!-- Load JS here for greater good =============================-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
