--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-gray"><h3>I believe that truly good design cannot exist inside a bubble. It's not art, its not engineering, its not manufacturing, its not marketing; its everything involved in bringing an idea to life.</h3>
+                        <span class="font-gray"><h3>I believe that truly good design cannot exist inside a bubble. It's not art, it's not engineering, it's not manufacturing, it's not marketing; it's everything involved in bringing an idea to life.</h3>
                         <h3> I believe that there aren't any skills that can't be learned, only those that have yet to be. </h3>
                         <h3>I believe in authenticity in design.
                         </h3></span>
