Large Screen Alignment

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-3 font-blue left">
+                    <div class="col-md-6 font-blue left">
                         <h1>Work</h1>
                         <div class="outer-line-top">  
                         </div>  
