--- a/loungechair.html
+++ b/loungechair.html
@@ -62,7 +62,7 @@
         <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-3 font-white left">
+                    <div class="col-md-6 font-white left">
                         <h1>Lounge Chair <span class="font-blue">|</span> 2013</h1>
                          <div class="outer-line-top">  
                         </div>  
@@ -157,7 +157,7 @@
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-3 font-blue left">
+                    <div class="col-md-6 font-blue left">
                         <h1>Other Work</h1>
                         <div class="outer-line-top">  
                         </div>  
