--- a/speaker.html
+++ b/speaker.html
@@ -62,14 +62,16 @@
         <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-3 font-white left">
+                    <div class="col-md-7 font-white left">
                         <h1>Bluetooth Speaker <span class="font-blue">|</span> 2013</h1>
+                        </div>
                          <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-dark">
                             </div>
                         <div class="outer-line-bottom">  
-                        </div> 
+                        </div>
+                        <div class="col-md-6 font-white left"> 
                         <h3 class="font-white">A wireless speaker I designed as part of the Introduction to Industrial Design Methods course at Northwestern. Currently in the process of getting a prototype built.</h3>
                     </div>
                 </div>  
@@ -135,7 +137,7 @@
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-3 font-blue left">
+                    <div class="col-md-6 font-blue left">
                         <h1>Other Work</h1>
                         <div class="outer-line-top">  
                         </div>  
